// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BenefitsIcons /> renders BenefitsIcons 1`] = `
<div
  className="mfui-benefits-icons class-name root-class"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      className="grid-class"
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        className="grid-column-class"
        desktop="4"
        key="0"
        tablet="5"
        wide="4"
      >
        <BenefitsIconsTile
          className="item-class"
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Оставайтесь всегда на связи"
          title="Звонки"
        />
      </GridColumn>
      <GridColumn
        className="grid-column-class"
        desktop="4"
        key="1"
        leftOffsetDesktop="1"
        leftOffsetTablet="1"
        leftOffsetWide="1"
        tablet="5"
        wide="4"
      >
        <BenefitsIconsTile
          className="item-class"
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders center-aligned columns with center-aligned icon on top 1`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="center"
    >
      <GridColumn
        desktop="4"
        key="0"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Оставайтесь всегда на связи"
          title="Звонки"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="1"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders center-aligned columns with center-aligned icon on top 2`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="center"
    >
      <GridColumn
        desktop="4"
        key="0"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="1"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интенет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="2"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders center-aligned columns with center-aligned icon on top 3`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="center"
    >
      <GridColumn
        desktop="5"
        key="0"
        leftOffsetDesktop="1"
        leftOffsetTablet="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="1"
        rightOffsetDesktop="1"
        rightOffsetTablet="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="2"
        leftOffsetDesktop="1"
        leftOffsetTablet="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="3"
        rightOffsetDesktop="1"
        rightOffsetTablet="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders center-aligned columns with center-aligned icon on top 4`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="center"
    >
      <GridColumn
        desktop="4"
        key="0"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="1"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="2"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="3"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="4"
        tablet="4"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="center-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left side icon 1`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="5"
        key="0"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Оставайтесь всегда на связи"
          title="Звонки"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="1"
        leftOffsetDesktop="1"
        leftOffsetWide="1"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left side icon 2`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="5"
        key="0"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="1"
        leftOffsetDesktop="1"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интенет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="2"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left side icon 3`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="5"
        key="0"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="1"
        leftOffsetDesktop="1"
        leftOffsetWide="1"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="2"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="3"
        leftOffsetDesktop="1"
        leftOffsetWide="1"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left side icon 4`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="5"
        key="0"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="1"
        leftOffsetDesktop="1"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="2"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="3"
        leftOffsetDesktop="1"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="5"
        key="4"
        tablet="10"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-side"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left-aligned icon on top 1`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="4"
        key="0"
        tablet="5"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Оставайтесь всегда на связи"
          title="Звонки"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="1"
        leftOffsetDesktop="1"
        leftOffsetTablet="1"
        leftOffsetWide="1"
        tablet="5"
        wide="4"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left-aligned icon on top 2`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="4"
        key="0"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="1"
        leftOffsetTablet="1"
        leftOffsetWide="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интенет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="2"
        leftOffsetWide="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left-aligned icon on top 3`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="4"
        key="0"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="1"
        leftOffsetDesktop="1"
        leftOffsetTablet="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="2"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="3"
        leftOffsetDesktop="1"
        leftOffsetTablet="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> renders left-aligned columns with left-aligned icon on top 4`] = `
<div
  className="mfui-benefits-icons"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        desktop="4"
        key="0"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="1"
        leftOffsetTablet="1"
        leftOffsetWide="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="2"
        leftOffsetWide="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="3"
        leftOffsetTablet="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        desktop="4"
        key="4"
        leftOffsetWide="1"
        tablet="5"
        wide="3"
      >
        <BenefitsIconsTile
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> should render in one column 1`] = `
<div
  className="mfui-benefits-icons class-name root-class"
>
  <div
    className="mfui-benefits-icons__inner"
  >
    <Grid
      className="grid-class"
      guttersLeft="medium"
      hAlign="left"
    >
      <GridColumn
        className="grid-column-class"
        desktop="10"
        key="0"
        tablet="10"
        wide="10"
      >
        <BenefitsIconsTile
          className="item-class"
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
      <GridColumn
        className="grid-column-class"
        desktop="10"
        key="1"
        tablet="10"
        wide="10"
      >
        <BenefitsIconsTile
          className="item-class"
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интенет"
        />
      </GridColumn>
      <GridColumn
        className="grid-column-class"
        desktop="10"
        key="2"
        tablet="10"
        wide="10"
      >
        <BenefitsIconsTile
          className="item-class"
          icon={
            <test-file-stub
              style={
                Object {
                  "display": "block",
                  "fill": "#00B956",
                }
              }
            />
          }
          iconPosition="left-top"
          text="Подключите, и гигабайты и минуты всегда будут с вами!"
          title="Интернет"
        />
      </GridColumn>
    </Grid>
  </div>
</div>
`;

exports[`<BenefitsIcons /> should render in one column on mobile 1`] = `
<BenefitsIcons
  className="class-name"
  classes={
    Object {
      "grid": "grid-class",
      "gridColumn": "grid-column-class",
      "item": "item-class",
      "root": "root-class",
    }
  }
  inOneColumn={true}
  items={
    Array [
      Object {
        "icon": <test-file-stub
          style={
            Object {
              "display": "block",
              "fill": "#00B956",
            }
          }
        />,
        "text": "Подключите, и гигабайты и минуты всегда будут с вами!",
        "title": "Интернет",
      },
      Object {
        "icon": <test-file-stub
          style={
            Object {
              "display": "block",
              "fill": "#00B956",
            }
          }
        />,
        "text": "Подключите, и гигабайты и минуты всегда будут с вами!",
        "title": "Интенет",
      },
      Object {
        "icon": <test-file-stub
          style={
            Object {
              "display": "block",
              "fill": "#00B956",
            }
          }
        />,
        "text": "Подключите, и гигабайты и минуты всегда будут с вами!",
        "title": "Интернет",
      },
    ]
  }
>
  <div
    className="mfui-benefits-icons class-name root-class"
  >
    <div
      className="mfui-benefits-icons__inner"
    >
      <Grid
        className="grid-class"
        guttersLeft="medium"
        hAlign="left"
      >
        <div
          className="mfui-grid grid-class"
        >
          <div
            className="mfui-grid__container mfui-grid__container_multi-row mfui-grid__container_h-align_left mfui-grid__container_gutters-left_medium"
          >
            <GridColumn
              className="mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              desktop="10"
              key=".$0"
              tablet="10"
              wide="10"
            >
              <div
                className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_10 mfui-grid-column_desktop_10 mfui-grid-column_tablet_10 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              >
                <BenefitsIconsTile
                  className="item-class"
                  icon={
                    <test-file-stub
                      style={
                        Object {
                          "display": "block",
                          "fill": "#00B956",
                        }
                      }
                    />
                  }
                  iconPosition="left-top"
                  text="Подключите, и гигабайты и минуты всегда будут с вами!"
                  title="Интернет"
                >
                  <div
                    className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_left-top item-class"
                  >
                    <div
                      className="mfui-benefits-icons-tile__svg-icon"
                    >
                      <test-file-stub
                        style={
                          Object {
                            "display": "block",
                            "fill": "#00B956",
                          }
                        }
                      />
                    </div>
                    <div
                      className="mfui-benefits-icons-tile__content-wrapper"
                    >
                      <Header
                        as="h5"
                        className="mfui-benefits-icons-tile__title"
                        color="default"
                        hAlign="inherit"
                      >
                        <h5
                          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-benefits-icons-tile__title"
                        >
                          Интернет
                        </h5>
                      </Header>
                      <div
                        className="mfui-benefits-icons-tile__content"
                      >
                        Подключите, и гигабайты и минуты всегда будут с вами!
                      </div>
                    </div>
                  </div>
                </BenefitsIconsTile>
              </div>
            </GridColumn>
            <GridColumn
              className="mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              desktop="10"
              key=".$1"
              tablet="10"
              wide="10"
            >
              <div
                className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_10 mfui-grid-column_desktop_10 mfui-grid-column_tablet_10 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              >
                <BenefitsIconsTile
                  className="item-class"
                  icon={
                    <test-file-stub
                      style={
                        Object {
                          "display": "block",
                          "fill": "#00B956",
                        }
                      }
                    />
                  }
                  iconPosition="left-top"
                  text="Подключите, и гигабайты и минуты всегда будут с вами!"
                  title="Интенет"
                >
                  <div
                    className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_left-top item-class"
                  >
                    <div
                      className="mfui-benefits-icons-tile__svg-icon"
                    >
                      <test-file-stub
                        style={
                          Object {
                            "display": "block",
                            "fill": "#00B956",
                          }
                        }
                      />
                    </div>
                    <div
                      className="mfui-benefits-icons-tile__content-wrapper"
                    >
                      <Header
                        as="h5"
                        className="mfui-benefits-icons-tile__title"
                        color="default"
                        hAlign="inherit"
                      >
                        <h5
                          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-benefits-icons-tile__title"
                        >
                          Интенет
                        </h5>
                      </Header>
                      <div
                        className="mfui-benefits-icons-tile__content"
                      >
                        Подключите, и гигабайты и минуты всегда будут с вами!
                      </div>
                    </div>
                  </div>
                </BenefitsIconsTile>
              </div>
            </GridColumn>
            <GridColumn
              className="mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              desktop="10"
              key=".$2"
              tablet="10"
              wide="10"
            >
              <div
                className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_10 mfui-grid-column_desktop_10 mfui-grid-column_tablet_10 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              >
                <BenefitsIconsTile
                  className="item-class"
                  icon={
                    <test-file-stub
                      style={
                        Object {
                          "display": "block",
                          "fill": "#00B956",
                        }
                      }
                    />
                  }
                  iconPosition="left-top"
                  text="Подключите, и гигабайты и минуты всегда будут с вами!"
                  title="Интернет"
                >
                  <div
                    className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_left-top item-class"
                  >
                    <div
                      className="mfui-benefits-icons-tile__svg-icon"
                    >
                      <test-file-stub
                        style={
                          Object {
                            "display": "block",
                            "fill": "#00B956",
                          }
                        }
                      />
                    </div>
                    <div
                      className="mfui-benefits-icons-tile__content-wrapper"
                    >
                      <Header
                        as="h5"
                        className="mfui-benefits-icons-tile__title"
                        color="default"
                        hAlign="inherit"
                      >
                        <h5
                          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-benefits-icons-tile__title"
                        >
                          Интернет
                        </h5>
                      </Header>
                      <div
                        className="mfui-benefits-icons-tile__content"
                      >
                        Подключите, и гигабайты и минуты всегда будут с вами!
                      </div>
                    </div>
                  </div>
                </BenefitsIconsTile>
              </div>
            </GridColumn>
          </div>
        </div>
      </Grid>
    </div>
  </div>
</BenefitsIcons>
`;

exports[`<BenefitsIcons /> should render in one column on mobile 2`] = `
<BenefitsIcons
  className="class-name"
  classes={
    Object {
      "grid": "grid-class",
      "gridColumn": "grid-column-class",
      "item": "item-class",
      "root": "root-class",
    }
  }
  inOneColumn={true}
  items={
    Array [
      Object {
        "icon": <test-file-stub
          style={
            Object {
              "display": "block",
              "fill": "#00B956",
            }
          }
        />,
        "text": "Подключите, и гигабайты и минуты всегда будут с вами!",
        "title": "Интернет",
      },
      Object {
        "icon": <test-file-stub
          style={
            Object {
              "display": "block",
              "fill": "#00B956",
            }
          }
        />,
        "text": "Подключите, и гигабайты и минуты всегда будут с вами!",
        "title": "Интенет",
      },
      Object {
        "icon": <test-file-stub
          style={
            Object {
              "display": "block",
              "fill": "#00B956",
            }
          }
        />,
        "text": "Подключите, и гигабайты и минуты всегда будут с вами!",
        "title": "Интернет",
      },
    ]
  }
>
  <div
    className="mfui-benefits-icons class-name root-class"
  >
    <div
      className="mfui-benefits-icons__inner"
    >
      <Grid
        className="grid-class"
        guttersLeft="medium"
        hAlign="center"
      >
        <div
          className="mfui-grid grid-class"
        >
          <div
            className="mfui-grid__container mfui-grid__container_multi-row mfui-grid__container_h-align_center mfui-grid__container_gutters-left_medium"
          >
            <GridColumn
              className="mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              desktop="10"
              key=".$0"
              tablet="10"
              wide="10"
            >
              <div
                className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_10 mfui-grid-column_desktop_10 mfui-grid-column_tablet_10 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              >
                <BenefitsIconsTile
                  className="item-class"
                  icon={
                    <test-file-stub
                      style={
                        Object {
                          "display": "block",
                          "fill": "#00B956",
                        }
                      }
                    />
                  }
                  iconPosition="center-top"
                  text="Подключите, и гигабайты и минуты всегда будут с вами!"
                  title="Интернет"
                >
                  <div
                    className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_center-top item-class"
                  >
                    <div
                      className="mfui-benefits-icons-tile__svg-icon"
                    >
                      <test-file-stub
                        style={
                          Object {
                            "display": "block",
                            "fill": "#00B956",
                          }
                        }
                      />
                    </div>
                    <div
                      className="mfui-benefits-icons-tile__content-wrapper"
                    >
                      <Header
                        as="h5"
                        className="mfui-benefits-icons-tile__title"
                        color="default"
                        hAlign="inherit"
                      >
                        <h5
                          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-benefits-icons-tile__title"
                        >
                          Интернет
                        </h5>
                      </Header>
                      <div
                        className="mfui-benefits-icons-tile__content"
                      >
                        Подключите, и гигабайты и минуты всегда будут с вами!
                      </div>
                    </div>
                  </div>
                </BenefitsIconsTile>
              </div>
            </GridColumn>
            <GridColumn
              className="mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              desktop="10"
              key=".$1"
              tablet="10"
              wide="10"
            >
              <div
                className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_10 mfui-grid-column_desktop_10 mfui-grid-column_tablet_10 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              >
                <BenefitsIconsTile
                  className="item-class"
                  icon={
                    <test-file-stub
                      style={
                        Object {
                          "display": "block",
                          "fill": "#00B956",
                        }
                      }
                    />
                  }
                  iconPosition="center-top"
                  text="Подключите, и гигабайты и минуты всегда будут с вами!"
                  title="Интенет"
                >
                  <div
                    className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_center-top item-class"
                  >
                    <div
                      className="mfui-benefits-icons-tile__svg-icon"
                    >
                      <test-file-stub
                        style={
                          Object {
                            "display": "block",
                            "fill": "#00B956",
                          }
                        }
                      />
                    </div>
                    <div
                      className="mfui-benefits-icons-tile__content-wrapper"
                    >
                      <Header
                        as="h5"
                        className="mfui-benefits-icons-tile__title"
                        color="default"
                        hAlign="inherit"
                      >
                        <h5
                          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-benefits-icons-tile__title"
                        >
                          Интенет
                        </h5>
                      </Header>
                      <div
                        className="mfui-benefits-icons-tile__content"
                      >
                        Подключите, и гигабайты и минуты всегда будут с вами!
                      </div>
                    </div>
                  </div>
                </BenefitsIconsTile>
              </div>
            </GridColumn>
            <GridColumn
              className="mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              desktop="10"
              key=".$2"
              tablet="10"
              wide="10"
            >
              <div
                className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_10 mfui-grid-column_desktop_10 mfui-grid-column_tablet_10 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium grid-column-class"
              >
                <BenefitsIconsTile
                  className="item-class"
                  icon={
                    <test-file-stub
                      style={
                        Object {
                          "display": "block",
                          "fill": "#00B956",
                        }
                      }
                    />
                  }
                  iconPosition="center-top"
                  text="Подключите, и гигабайты и минуты всегда будут с вами!"
                  title="Интернет"
                >
                  <div
                    className="mfui-benefits-icons-tile mfui-benefits-icons-tile_icon-position_center-top item-class"
                  >
                    <div
                      className="mfui-benefits-icons-tile__svg-icon"
                    >
                      <test-file-stub
                        style={
                          Object {
                            "display": "block",
                            "fill": "#00B956",
                          }
                        }
                      />
                    </div>
                    <div
                      className="mfui-benefits-icons-tile__content-wrapper"
                    >
                      <Header
                        as="h5"
                        className="mfui-benefits-icons-tile__title"
                        color="default"
                        hAlign="inherit"
                      >
                        <h5
                          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit mfui-benefits-icons-tile__title"
                        >
                          Интернет
                        </h5>
                      </Header>
                      <div
                        className="mfui-benefits-icons-tile__content"
                      >
                        Подключите, и гигабайты и минуты всегда будут с вами!
                      </div>
                    </div>
                  </div>
                </BenefitsIconsTile>
              </div>
            </GridColumn>
          </div>
        </div>
      </Grid>
    </div>
  </div>
</BenefitsIcons>
`;
